--- a/css/styles.css
+++ b/css/styles.css
@@ -559,11 +559,11 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.is-hidden {
+/* .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
+} */
 .modal_cla {
   position: absolute;
   top: 50%;
@@ -576,6 +576,12 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
+}
+
+.modal_cla .headsecti {
+  font-size: 16px;
+  text-align: center;
 }
 .but_modal {
   position: absolute;
@@ -606,4 +612,12 @@ img {
 }
 .svg_icons_footer {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modul-label {
+}
+.modul-input {
+}
+.modul-div {
+  display: flex;
+  flex-direction: column;
 }
