--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --cloud: #4d5ae5;
   --bot_color: #8e8f99;
   --white: #ffffff;
+  --navyblue-modal: rgba(46, 47, 66, 0.4);
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -576,12 +577,12 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px 24px;
 }
 
 .modal_cla .headsecti {
   font-size: 16px;
   text-align: center;
+  margin-bottom: 16px;
 }
 .but_modal {
   position: absolute;
@@ -613,11 +614,45 @@ img {
 .svg_icons_footer {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form-modul {
+  padding: 72px 24px 24px 24px;
+}
 .modul-label {
+  display: inline-block;
 }
 .modul-input {
+  width: 100%;
+  height: 40px;
+  /* margin-bottom: 8px; */
+  border: 1px solid var(--navyblue-modal);
+  border-radius: 4px;
+  padding-left: 38px;
+}
+.modul-input:hover {
+  border: 1px solid var(--iris, #4d5ae5);
+}
+.modul-input:focus {
+  border: 1px solid var(--iris, #4d5ae5);
 }
 .modul-div {
-  display: flex;
-  flex-direction: column;
+  position: relative;
+}
+.modul-svg {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+}
+
+.Modul-comment {
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0.48px;
+}
+.modul-policy {
+  color: #404bbf;
 }
