--- a/css/styles.css
+++ b/css/styles.css
@@ -320,7 +320,7 @@ img {
   height: 40px;
 }
 .svg_icons_bot {
-  fill: #f4f4fd;
+  fill: #f4fdf7;
 }
 .site_svg {
   display: flex;
@@ -560,11 +560,11 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .is-hidden {
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-} */
+}
 .modal_cla {
   position: absolute;
   top: 50%;
@@ -617,33 +617,50 @@ img {
 .form-modul {
   padding: 72px 24px 24px 24px;
 }
+
+.modal-box {
+  margin-bottom: 8px;
+}
+
 .modul-label {
   display: inline-block;
 }
 .modul-input {
   width: 100%;
   height: 40px;
-  /* margin-bottom: 8px; */
   border: 1px solid var(--navyblue-modal);
   border-radius: 4px;
   padding-left: 38px;
+  outline: transparent;
+  background-color: transparent;
+  color: #2e2f42;
 }
-.modul-input:hover {
-  border: 1px solid var(--iris, #4d5ae5);
-}
-.modul-input:focus {
-  border: 1px solid var(--iris, #4d5ae5);
-}
+
 .modul-div {
   position: relative;
 }
 .modul-svg {
   position: absolute;
+  fill: #2e2f42;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  fill: #2e2f42;
 }
+
+.modul-use-svg {
+}
+.modul-input:focus {
+  border-color: #4d5ae5;
+}
+.modul-input:focus + .modul-svg {
+  fill: #4d5ae5;
+}
+
+/* .modal-input:focus + .modul-svg {
+  stroke: yellow;
+  fill: #31d0aa;
+  color: #553244;
+} */
 
 .Modul-comment {
   font-family: Roboto;
