--- a/css/styles.css
+++ b/css/styles.css
@@ -656,11 +656,13 @@ img {
   fill: #4d5ae5;
 }
 
-/* .modal-input:focus + .modul-svg {
-  stroke: yellow;
-  fill: #31d0aa;
-  color: #553244;
-} */
+.area-commet {
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal);
+  outline: transparent;
+}
 
 .Modul-comment {
   font-family: Roboto;
