--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,7 @@ img {
 .footer-svg {
   position: absolute;
   fill: #ffffff;
+  margin-left: 16px;
   right: 24px;
   top: 50%;
   transform: translateY(-50%);
@@ -458,22 +459,28 @@ img {
 .footer-input {
   width: 264px;
   height: 40px;
-
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  background-color: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: #2e2f42;
+  color: #ffffff;
 }
 .footer-label {
 }
 
 .footer-input::placeholder {
-  padding-left: 16px;
   color: #ffffff;
 }
 
 .footer-button {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* margin: 0 auto; */
   background-color: #4d5ae5;
   font-family: inherit;
@@ -484,8 +491,7 @@ img {
   text-align: left;
   color: #ffffff;
   cursor: pointer;
-  /* min-width: 165px; */
-  width: 165px;
+  min-width: 165px;
   padding: 8px 24px;
   height: 40px;
   border: none;
