--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,8 @@ img {
   pointer-events: none;
 }
 .modal_cla {
-  position: absolute;
+  position: relative;
+  padding: 72px 24px 24px 24px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -673,7 +674,6 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-modul {
-  padding: 72px 24px 24px 24px;
 }
 
 .modal-box {
