--- a/css/styles.css
+++ b/css/styles.css
@@ -623,7 +623,7 @@ img {
   visibility: hidden;
   pointer-events: none;
 }
-.modal_cla {
+.modal {
   position: relative;
   padding: 72px 24px 24px 24px;
   top: 50%;
@@ -638,7 +638,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal_cla .headsecti {
+.modal .headsecti {
   font-size: 16px;
   text-align: center;
   margin-bottom: 16px;
