--- a/css/styles.css
+++ b/css/styles.css
@@ -638,7 +638,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.foot-paragph {
+.fparagph {
   font-weight: 500;
   font-size: 16px;
   text-align: center;
