--- a/css/styles.css
+++ b/css/styles.css
@@ -696,8 +696,9 @@ img {
   border-radius: 4px;
   padding-left: 38px;
   outline: transparent;
-  background-color: transparent;
-  color: #2e2f42;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* background-color: transparent;
+  color: #2e2f42; */
 }
 
 .modul-div {
