--- a/css/styles.css
+++ b/css/styles.css
@@ -706,6 +706,7 @@ img {
 }
 .modul-svg {
   position: absolute;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #2e2f42;
   left: 16px;
   top: 50%;
