--- a/css/styles.css
+++ b/css/styles.css
@@ -702,8 +702,8 @@ img {
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* background-color: transparent;
-  color: #2e2f42; */
+  background-color: transparent;
+  color: #2e2f42;
 }
 
 .modul-div {
