--- a/css/styles.css
+++ b/css/styles.css
@@ -690,7 +690,6 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-
   color: var(--bot_color);
   margin-bottom: 4px;
 }
@@ -703,7 +702,7 @@ img {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: transparent;
-  color: #2e2f42;
+  /* color: #2e2f42; */
 }
 
 .modul-div {
