--- a/css/styles.css
+++ b/css/styles.css
@@ -734,9 +734,15 @@ img {
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  border: 1px solid var(--navyblue-modal);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
   outline: transparent;
   resize: none; /* Блокує розширення */
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.area-commet:focus {
+  border-color: #4d5ae5;
 }
 
 .Modul-comment {
