--- a/css/styles.css
+++ b/css/styles.css
@@ -747,15 +747,15 @@ img {
 .area-commet:focus {
   border-color: #4d5ae5;
 }
+.bot-fotter-box {
+  margin-bottom: 24px;
+}
 
 .Modul-comment {
-  font-family: Roboto;
   font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 16px;
-  letter-spacing: 0.48px;
-  margin-bottom: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--bot_color);
 }
 .modul-policy {
   color: #404bbf;
