--- a/css/styles.css
+++ b/css/styles.css
@@ -751,11 +751,24 @@ img {
   margin-bottom: 24px;
 }
 
-.Modul-comment {
+.modul-comment {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--bot_color);
+}
+.foot-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modul-policy {
   color: #404bbf;
