--- a/css/styles.css
+++ b/css/styles.css
@@ -751,7 +751,7 @@ img {
   margin-bottom: 24px;
 }
 
-.modul-comment {
+.mod-com {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
