--- a/css/styles.css
+++ b/css/styles.css
@@ -770,8 +770,9 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modul-policy {
-  color: #404bbf;
+  color: #4d5ae5;
 }
 /* close-modul-fon */
 .modal-check {
